fixed some layout problems

--- a/src/App.scss
+++ b/src/App.scss
@@ -153,6 +153,9 @@
     -moz-box-shadow: 8px 0px 7px -10px rgba(0,0,0,0.75);
     box-shadow: 8px 0px 7px -10px rgba(0,0,0,0.75);
     z-index: 1;
+    height: calc(100vh - 30px);
+    display: flex;
+    flex-direction: column;
   }
   .left-bar-container__block__top {
     display: flex;
@@ -237,23 +240,23 @@
   }
   .leftbar-list {
     background: white;
-    margin: 0 1rem;
+    margin: 1rem;
+    overflow-y: auto;
+    flex-grow: 2;
   }
+
   .leftbar-list__category {
     padding: 0;
-    overflow-y: scroll;
     overflow-x: hidden;
-    height: auto;
-    max-height: 40vh;
+    margin-bottom: 0;
   }
   .leftbar-list__category-label {
-    padding-top: 1rem;
     padding-left: 1rem;
     width: 100%;
+    margin-bottom: 0;
   }
   .leftbar-list__category-item {
-    padding-left: 1rem;
-    margin-bottom: 1rem;
+    padding: 1rem 0 1rem 1rem;
     width: 100%;
     list-style-type: none;
     text-align: left;
@@ -292,4 +295,8 @@ div[disabled] {
   pointer-events: none;
   opacity: 0.7;
   color:  grey;
+}
+
+hr.doctor-list-item {
+  margin: 0 !important;
 }
